--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.3",
