--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.5",
     "react-syntax-highlighter": "^15.6.1",
