--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
+    "pdfjs-dist": "^2.10.377",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^9.0.3",
+    "react-pdf": "^9.2.1",
+    "react-remove-scroll": "^2.6.3",
     "react-router-dom": "^7.1.5",
     "react-syntax-highlighter": "^15.6.1",
     "sweetalert2": "^11.16.1"
