--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,11 @@
-# Use Python 3.10
-FROM python:3.10
+FROM python:3.11-slim
 
-# Set the working directory inside the container
 WORKDIR /app
 
-# Upgrade pip to the latest version
-RUN pip install --upgrade pip
-
-# Copy requirements.txt and install dependencies
-COPY requirements.txt .
+COPY ./requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application code
-COPY . .
+COPY . /app/
 
-# Expose port 8000
-EXPOSE 8000
-
-# Start FastAPI with Uvicorn
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
