--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,36 @@
-version: '3.8'
-
 services:
-  frontend:
-    container_name: vite-react
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "5173:5173"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    depends_on:
-      - backend
-    networks:
-      - app_network
-
   backend:
-    container_name: fastapi-backend
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
+    build: ./backend
     volumes:
       - ./backend:/app
+    env_file:
+      - ./backend/.env
+    ports:
+      - "8000:8000"
     depends_on:
       - db
-    networks:
-      - app_network
-    env_file:
-      - .env  # Load environment variables for backend
+    restart: always
+
+  frontend:
+    build: ./frontend
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules  # Prevent overwrite of node_modules
+    ports:
+      - "5173:5173"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    restart: always
 
   db:
-    container_name: postgres-db
     image: postgres:15
-    restart: always
-    env_file:
-      - .env  # Load environment variables for database
-    ports:
-      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: mydb
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    networks:
-      - app_network
-
-networks:
-  app_network:
-    driver: bridge
+    restart: always
 
 volumes:
   postgres_data:
