--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,15 @@ services:
       - "8000:8000"
     depends_on:
       - db
-    restart: always
+    restart: unless-stopped
 
   frontend:
     build: ./frontend
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules  # Prevent overwrite of node_modules
     ports:
-      - "5173:5173"
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    restart: always
+      - "80:80"
+    restart: unless-stopped
+    depends_on:
+      - backend
 
   db:
     image: postgres:15
@@ -30,7 +27,7 @@ services:
       POSTGRES_DB: mydb
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    restart: always
+    restart: unless-stopped
 
 volumes:
   postgres_data:
