--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,3 +1,4 @@
+# frontend/default.conf
 server {
     listen 80;
 
@@ -11,9 +12,10 @@ server {
 
     # Proxy API requests to backend
     location /api/ {
-        rewrite ^/api(/.*)$ $1 break;
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
